force-app/main/default/objects/Patient_Medical_Test__c/Patient_Medical_Test__c.object-meta.xml
<CustomObject>
    <label>Patient Medical Test</label>
    <nameField>
        <label>Patient Medical Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Medical Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>