force-app/main/default/objects/Patient_Medical_Test__c/fields/Date_Performed__c.field-meta.xml
<CustomField>
    <fullName>Date_Performed__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Performed</label>
    <type>DateTime</type>
</CustomField>