force-app/main/default/objects/Patient_Medical_Test__c/fields/Encounter__c.field-meta.xml
<CustomField>
    <fullName>Encounter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Encounter</label>
    <referenceTo>Encounter__c</referenceTo>
    <relationshipLabel>Patient Medical Tests</relationshipLabel>
    <relationshipName>Patient_Medical_Tests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>