force-app/main/default/objects/Patient_Medical_Test__c/fields/Medical_Test__c.field-meta.xml
<CustomField>
    <fullName>Medical_Test__c</fullName>
    <label>Medical Test</label>
    <referenceTo>Medical_Test__c</referenceTo>
    <relationshipName>Pacient_Medical_Tests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>